Lists Menu Sidebar Toolbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <!-- <app-typography></app-typography> -->
 <!-- <app-buttons></app-buttons> -->
-<app-badges></app-badges>
+<!-- <app-badges></app-badges> -->
+<!-- <app-spinner></app-spinner> -->
+<!-- <app-toolbar></app-toolbar> -->
+<!-- <app-sidebar></app-sidebar> -->
+<!-- <app-menu></app-menu> -->
+<app-lists></app-lists>
