expansion panel list grid-list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,6 @@
 <!-- <app-toolbar></app-toolbar> -->
 <!-- <app-sidebar></app-sidebar> -->
 <!-- <app-menu></app-menu> -->
-<app-lists></app-lists>
+<!-- <app-lists></app-lists> -->
+<!-- <app-grid-list></app-grid-list> -->
+<app-expansion-panel></app-expansion-panel>
