--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,6 @@
 <!-- <app-menu></app-menu> -->
 <!-- <app-lists></app-lists> -->
 <!-- <app-grid-list></app-grid-list> -->
-<app-expansion-panel></app-expansion-panel>
+<!-- <app-expansion-panel></app-expansion-panel> -->
+<!-- <app-card></app-card> -->
+<app-tabs></app-tabs>
