--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,6 @@
 <!-- <app-grid-list></app-grid-list> -->
 <!-- <app-expansion-panel></app-expansion-panel> -->
 <!-- <app-card></app-card> -->
-<app-tabs></app-tabs>
+<!-- <app-tabs></app-tabs> -->
+<!-- <app-stepper></app-stepper> -->
+<app-input></app-input>
